--- a/lab14/index.html
+++ b/lab14/index.html
@@ -25,16 +25,23 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+					<p>- The challenge for this lab was to debug and also refactor a previous lab by utilizing 
+						debugging tools and strategies in our webpages and JS scripts. 
+					</p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+					<p>- </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<p>- I decided to go and redo parts of 
+						my lab 7, 10 and 11 as I want to combine getting a user's input and change their output to a Metal Gear Solid codename 
+					 and based on the length of the user's name they will be assigned to a special forces group from Metal Gear.</p>
 			</div>
 
 			<div class="minor-section">
@@ -44,7 +51,6 @@
 
             <div class="minor-section">
                 <h2>Lab Refactoring</h2>
-               
                 <a href="index.html" class="button">Press to become the Greatest Soldier</a>
             </div>
 
