added code and changed CSS elements

--- a/lab14_factoring/index.html
+++ b/lab14_factoring/index.html
@@ -8,7 +8,7 @@
 
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<!-- <link rel="stylesheet" type="text/css" href="../css/site.css"> -->
 
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	
@@ -21,37 +21,23 @@
 
 	<main id="content">
 		<section>
-			<h1>Lab 14</h1>
-			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+			<div class="code-section">
+					<h1>Codec Frequency - 140.85</h1>
+					<div class="text-section">
+						<p>Greetings soilder, I am Colonel Campbell the commander of the special forces unit Foxhound.
+							Enter your first and last name, then you will be assigned a code name then to a
+							special forces or PMC group.
+						</p>
+					</div>
+					<img id="campbell" src="img/campbell.gif"/>
+				 <input id="textbox" type="text" placeholder="Enter first and last name" />
+                 <button id="action">Press for Codename</button>
+
 			</div>
-
-			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
-
-			<div class="minor-section">
-					<h2>Results</h2>
-					<div id="output"></div>
-			</div>
-
-            <div class="minor-section">
-                <h2>Lab Refactoring</h2>
-
-                 <button id="button">Press to be become the Greatest Soilder</button>
-            </div>
-
 		</section>
         
 		<nav id="links">
-			<div class="minor-section">
+			<div class="code-section">
 				<h2>Homepage</h2>
 				<a href="../index.html">Homepage</a>
 		
@@ -59,4 +45,6 @@
 			</div>
 		</nav>
 	</main>
+
+	
 </body>
