added and edited elements

--- a/lab14_factoring/index.html
+++ b/lab14_factoring/index.html
@@ -32,7 +32,16 @@
 					<img id="campbell" src="img/campbell.gif"/>
 				 <input id="textbox" type="text" placeholder="Enter first and last name" />
                  <button id="action">Press for Codename</button>
+			</div>
 
+			<div class="code-section">
+				<h2>Codec Frequency - 141.80</h2>
+				<div class="text-section">
+					<p>Colonel...kept you waiting huh?...whose this a new recurit or a rival PMC?
+						Well then...<div id="output"></div>
+					</p>
+				</div>
+				<img id="snake" src="img/snake.gif"/>
 			</div>
 		</section>
         
