added lab14 link

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 		<nav id="'links"></nav>
 		<a href="lab13/">Lab 13 - Loops</a>
 
+		<nav id="'links"></nav>
+		<a href="lab14/">Lab 14 - Debugging</a>
+
+
 	    </div>
 
 		</nav>
