--- a/lab14/index.html
+++ b/lab14/index.html
@@ -51,7 +51,9 @@
 
             <div class="minor-section">
                 <h2>Lab Refactoring</h2>
-                <a href="index.html" class="button">Press to become the Greatest Soldier</a>
+                <nav id="'links"></nav>
+		       <a href="lab14_factoring/"></a>
+
             </div>
 
 		</section>
