lab14 edit, working links

--- a/lab14_factoring/index.html
+++ b/lab14_factoring/index.html
@@ -36,17 +36,16 @@
 				<h2>Codec Frequency - 141.80</h2>
 				<div class="text-section">
 					<p>Colonel...kept you waiting huh?...whose this a new recurit or a rival PMC?
-						Well then...<div id="output"></div>
+					<div id="output"></div>
 					</p>
 				</div>
 				<img id="snake" src="img/snake.gif"/>
 			</div>
 		</section>
         
-		<nav id="links">
 			<div class="code-section">
-				<h2>Homepage</h2>
-				<a href="../index.html">Homepage</a>
+				<nav id="'links"></nav>
+		    <a href="lab14/">Lab 14 - Debugging</a>
 		
 			</a>
 			</div>
