--- a/lab_snake/index.html
+++ b/lab_snake/index.html
@@ -28,16 +28,16 @@
 						</p>
 					</div>
 					<img id="campbell" src="img/campbell.gif"/>
-				 <input id="textbox" type="text" placeholder="Enter first and last name" />
-                 <button id="action">Press for Codename</button>
+				 <input id="input" type="text" placeholder="Enter your first and last name">
+                  <button id="button">Submit</button>
 			</div>
 
 			<div class="code-section">
 				<h2>Codec Frequency - 141.80</h2>
 				<div class="text-section">
-					<p>Colonel...kept you waiting huh?...whose this a new recurit or a rival PMC?
-					<div id="output"></div>
-					</p>
+				
+				    <div id="output"></div>
+	
 				</div>
 				<img id="snake" src="img/snake.gif"/>
 			</div>
