--- a/lab14a/index.html
+++ b/lab14a/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Lab 14_Factoring</title>
+	<title>Lab 14a Factoring</title>
 
   	<meta charset="UTF-8" />
 
@@ -30,6 +30,7 @@
 					<img id="campbell" src="img/campbell.gif"/>
 				 <input id="input" type="text" placeholder="Enter your first and last name">
                   <button id="button">Submit</button>
+				  
 			</div>
 
 			<div class="code-section">
@@ -37,6 +38,7 @@
 				<div class="text-section">
 				
 				    <div id="output"></div>
+					<script src="js/lab.js"></script>
 	
 				</div>
 				<img id="snake" src="img/snake.gif"/>
