edit html for campbell

--- a/lab14a/index.html
+++ b/lab14a/index.html
@@ -28,7 +28,7 @@
 						</p>
 					</div>
 					<img id="campbell" src="img/campbell.gif"/>
-				 <input id="input" type="text" placeholder="Enter your first and last name">
+				 <input id="input" type="text" placeholder="Enter first and last name">
                   <button id="button">Submit</button>
 				  
 			</div>
