--- a/lab14/index.html
+++ b/lab14/index.html
@@ -51,9 +51,13 @@
 		</section>
 
 		<nav id="links">
+
+			
 			<div class="minor-section">
 				<h2>Homepage</h2>
 				<a href="../index.html">Homepage</a>
+				<nav id="'links"></nav>
+		        <a href="lab14a/">Lab 14a</a>
 		
 			</a>
 			</div>
