--- a/lab14a/index.html
+++ b/lab14a/index.html
@@ -19,15 +19,14 @@
 
 	<main id="content">
 		<section>
-			<div class="code-section">
+			<div class="campell-section">
 					<h1>Codec Frequency - 140.85</h1>
 					<div class="text-section">
 						<p>Greetings soilder, I am Colonel Campbell the commander of the special forces unit Foxhound.
 							Enter your first and last name, then you will be assigned a code name then to a
-							special forces unit or PMC group.
-						</p>
-					</div>
+							special forces unit or PMC group.</p>
 					<img id="campbell" src="img/campbell.gif"/>
+
 				 <input id="input" type="text" placeholder="Enter first and last name">
                   <button id="button">Submit</button>
 				  
@@ -45,9 +44,8 @@
 			</div>
 		</section>
         
-			<div class="code-section">
-				<nav id="'links"></nav>
-		    <a href="lab14/">Lab 14 - Debugging</a>
+			<nav id="'links"></nav>
+		<a href="lab14/">Lab 14 - Debugging</a>
 		
 			</a>
 			</div>
