--- a/lab14a/index.html
+++ b/lab14a/index.html
@@ -21,11 +21,14 @@
 		<section>
 			<div class="campell-section">
 					<h1>Codec Frequency - 140.85</h1>
+					<div class="gif-box">
 					<img id="campbell" src="img/campbell.gif"/>
-					<div class="text-section">
+					<div class="codec-section">
 						<p>Greetings soilder, I am Colonel Campbell the commander of the special forces unit Foxhound.
 							Enter your first and last name, then you will be assigned a code name then to a
 							special forces unit or PMC group.</p> 
+					</div>
+				<div>
 				 <input id="input" type="text" placeholder="Enter first and last name">
                   <button id="button">Submit</button> </div>
 				  
@@ -34,7 +37,7 @@
 			<div class="snake-section" id="snakeSection" style="display: none;">
 				<h2>Codec Frequency - 141.80</h2>
 				<img id="snake" src="img/snake.gif"/>
-				<div class="text-section">
+				<div class="codec-section">
 				    <div id="output"></div>
 					<script src="js/lab.js"></script>
 				</div>
