--- a/lab14/index.html
+++ b/lab14/index.html
@@ -45,22 +45,30 @@
 			</div>
 
 			<div class="minor-section">
+				    <h2>Debugging</h2>
+					 <img id="lab14_issue1" src="img/lab14_issue1.jpg" />
 					<h2>Results</h2>
-					<div id="output"></div>
+                     <img id="lab14_webpage" src="img/lab14_webpage.jpg" />
+					
+			</div>
+
+			<div class="minor-section">
+				<h2>Link to Lab 14a</h2>
+				   <!-- link to lab14a -->
+				 <na id="'links"></na>
+                <a href="../lab14a/"> Go to Lab 14A </a>
+             </nav>
 			</div>
 		</section>
 
-		<nav id="links">
-
-			
 			<div class="minor-section">
 				<h2>Homepage</h2>
-				<a href="../index.html">Homepage</a>
+			 <!-- link to Homepage -->
 				<nav id="'links"></nav>
-		        <a href="lab14a/">Lab 14a</a>
-		
-			</a>
+				<a href="../index.html">Homepage</a>
 			</div>
+
+
 		</nav>
 	</main>
 </body>
