--- a/lab14a/index.html
+++ b/lab14a/index.html
@@ -45,11 +45,10 @@
 		</section>
 
         <div class="text-section">
-			<nav id="'links"></nav>
-		<a href="lab14/">Lab 14 - Debugging</a>
-			</a>
+		<nav>
+        <a href="../lab14/"> Back to Lab 14 </a>
+        </nav>
 			</div>
-		</nav>
 	</main>
 
 	
