--- a/lab14/index.html
+++ b/lab14/index.html
@@ -33,7 +33,13 @@
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
-					<p>- </p>
+					<p>- when I was working on my lab I did encounter some issues. For instance I was having 
+						issues connecting my lab14 to lab14, which was the lab I was refactoring. I changed the name of it
+						to make it easier to find and better link between my lab14 and to my homepage. I found this issue by inspecting
+						the console and following the steps to change it. But I had some issues with my JS mainly being typos and variables 
+						but undeclared. I solved by testing different parts and making comment blocks to help my code but overall I wanted to combine
+						three of the labs I had most fun with and wanted to combine all of them together and make it better.
+					</p>
 			</div>
 
 			<div class="minor-section">
