--- a/lab15/index.html
+++ b/lab15/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab 1 Experiment Page</title>
 
-	<!-- Use UTF character set, a good idea with any webpage -->
+	<title>Lab 15 Ajax</title>
+
   	<meta charset="UTF-8" />
-	<!-- Set viewport so page remains consistently scaled w narrow devices -->
+
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	
-	<!-- Include a sitewide CSS file for consistent styling across the site -->
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<!-- Lab-specifc CSS file for any special styling of this particular page -->
+
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	
-	<!-- load jQuery library to make javascript easier (must be above our lab js)-->
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
+
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+	
 </head>
 <body>
 	<main id="content">
 		<section>
-			<h1>Lab 1 Experiment Page</h1>
+			<h1>Lab 15 - Ajax</h1>
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
@@ -56,3 +54,4 @@
 </body>
 </html>
 <html>
+
