--- a/lab15/index.html
+++ b/lab15/index.html
@@ -38,8 +38,14 @@
 
 			<div class="minor-section">
 					<h2>Results</h2>
-					<div id="output"></div>
+				
 			</div>
+
+           <div class="minor-section">
+                 <h2>API Ajax</h2>
+                 <button id="sumbuton">Press me</button>
+                 <div id="output"></div>
+           </div>
 
 		</section>
 		<nav id="links">
