--- a/lab15/index.html
+++ b/lab15/index.html
@@ -24,17 +24,25 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
+                    <p> - The challenge for this lab was to find a API and use AJAX to get an API to appear on our webpage </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
+                    <p> - The lab wasnt too difficult the example shown in lab and our lecture was really simple to 
+                        follow and the main issue I had that my code didn't work but I went back and realized I missed the
+                        button for my code but also it was finding a fun API to use but I found an API that generates dinosaur names.
+                    </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			</div>
+			        <p> - The lab wasnt to bad but fun to do and go through different APIs and fun one to use for my lab. But also
+                        I hope to find something to use for my group project.
+                    </p>
+                </div>
 
 			<div class="minor-section">
 					<h2>Results</h2>
@@ -42,9 +50,9 @@
 			</div>
 
            <div class="minor-section">
-                 <h2>API Ajax</h2>
-                 <button id="sumbuton">Press me</button>
-                 <div id="output"></div>
+               <h2> Dino Generator - API </h2>
+             <button id="button">Get Dinosaurs</button>
+             <div id="some-awesome-container" style="margin-top: 20px;"></div>
            </div>
 
 		</section>
