--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 		<nav id="'links"></nav>
 		<a href="lab14/">Lab 14 - Debugging</a>
 
+		<nav id="'links"></nav>
+		<a href="lab15/">Lab 15 - AJAX/ JSON</a>
+
 
 	    </div>
 
