--- a/lab15/index.html
+++ b/lab15/index.html
@@ -52,7 +52,7 @@
            <div class="minor-section">
                <h2> Dino Generator - API </h2>
              <button id="button">Get Dinosaurs</button>
-             <div id="some-awesome-container" style="margin-top: 20px;"></div>
+             <div id="button" style="margin-top: 20px;"></div>
            </div>
 
 		</section>
