--- a/lab14a/index.html
+++ b/lab14a/index.html
@@ -24,7 +24,7 @@
 					<div class="gif-box">
 					<img id="campbell" src="img/campbell.gif"/>
 					<div class="codec-section">
-						<p>Greetings soilder, I am Colonel Campbell the commander of the special forces unit Foxhound.
+						<p>Greetings solder, I am Colonel Campbell the commander of the special forces unit Foxhound.
 							Enter your first and last name, then you will be assigned a code name then to a
 							special forces unit or PMC group.</p> 
 					</div>
