--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
 		<nav id="'links"></nav>
 		<a href="lab15/">Lab 15 - AJAX/ JSON</a>
 
+		<nav id="'links"></nav>
+		<a href="lab16/">Lab 16 - JSON and APIs</a>
+
 
 	    </div>
 
