--- a/lab16/index.html
+++ b/lab16/index.html
@@ -41,15 +41,9 @@
                     </p>
                 </div>
 
-			<div class="minor-section">
-					<h2>Results</h2>
-					<img id="lab16jscode" src="img/lab16jscode.jpg">
-				
-			</div>
 
            <div class="minor-section">
-               <h2> JSON and APIs Button</h2>
-                 <button>API Button</button>
+               <h2> JSON and APIs Results </h2>
                  <div id="output">
                  </div>
            </div>
