--- a/lab16/index.html
+++ b/lab16/index.html
@@ -44,7 +44,9 @@
 
            <div class="minor-section">
                <h2> JSON and APIs Results </h2>
-                 <div id="output">
+                <button id="getComic">Get XKCD Comic</button>
+                <div id="output"></div>
+
                  </div>
            </div>
 
