added responses and changed id object

--- a/lab16/index.html
+++ b/lab16/index.html
@@ -30,21 +30,24 @@
 			<div class="minor-section">
 					<h2>Problems</h2>
 					<p>What problems arose? How did you solve them? </p>
-                    <p> - 
+                    <p> - At first my code wasnt working an didnt display. I had some errors by checking the console
+                        and found I missed type "ajaxcomc" instead of "ajaxComic" for the output. But would load but I added comments to 
+                        help strucutre my code.
                     </p>
 			</div>
 
 			<div class="minor-section">
 					<h2>Reflection</h2>
 					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
-			        <p> - 
+			        <p> - Was hard but I was able to find an example on W3S school to follow and also the example done in class for last lecutre and 
+                        the one provided on the canvas page helped me gettting started.
                     </p>
                 </div>
 
 
            <div class="minor-section">
                <h2> JSON and APIs Results </h2>
-                <button id="getComic">Get XKCD Comic</button>
+                <button id="ajaxComic">Get XKCD Comic</button>
                 <div id="output"></div>
 
                  </div>
