--- a/lab16/index.html
+++ b/lab16/index.html
@@ -24,7 +24,7 @@
 			<div class="minor-section">
 					<h2>Challenge</h2>
 					<p>Restate the challenge of the lab here.</p>
-                    <p> -   </p>
+                    <p> -Using ajax to connect to an API and display a comic from XKCD </p>
 			</div>
 
 			<div class="minor-section">
